<resources>
    <string name="app_name">Piknikuy</string>
    <string name="let_s_piknikuy">Let\'s\nPiknikuy!</string>
    <string name="search_here">search here</string>
    <string name="hotel">Hotel</string>
    <string name="resto">Resto</string>
    <string name="wisata">Wisata</string>
    <string name="maps">Maps</string>
    <string name="trend">Trend</string>
    <string name="top_visitor">Top Visitor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Nama</string>
    <string name="location">location</string>
    <string name="detail_resto">Detail Restaurant</string>
    <string name="picture">Picture</string>
    <string name="name">Resto Name</string>
    <string name="description">Description</string>
    <string name="todetail">toDetail</string>
    <string name="search">search</string>
    <string name="favorite">favorite</string>
    <string name="rating">rating</string>
    <string name="favorite_hotel">Favorite Hotel</string>
    <string name="favorite_resto">Favorite Restaurant</string>
    <string name="restaurant">Restaurant</string>
    <string name="delete">Delete</string>
    <string name="dialog_close">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="Yes">Ya</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="no">Tidak</string>
    <string name="setting">setting</string>
    <string name="Setting">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="piknikuy">Piknikuy</string>
    <string name="title_activity_wisata">WisataActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="favorite_wisata">Favorite Wisata</string>
    <string name="image_item">Image Item</string>
    <string name="image_item_bg">Image Item bg</string>
    <string name="status_item">Status Item</string>
    <string name="status_save">Status Save:</string>
</resources>